--- a/scheme.html
+++ b/scheme.html
@@ -4,47 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        crossorigin="anonymous" />
-    <title>StudySphere - Scheme</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <title>VTUChamp - Scheme</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="left"><a href="/index.html">Study<span class="purple">S</span>phere</a></div>
-            <div class="right">
-                <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li class="navbar-item dropdown">
-                        <a href="#">Scheme</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/scheme.html">2022 Scheme</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="/">About</a></li>
-                    <li><a href="/">Contact Us</a></li>
+    <div class="top-banner">
+        <div class="container">
+            <div class="small-bold-text banner-text">Hii 🙃, Scholars! Grab our best notes and ace your classes with
+                ease!</div>
+        </div>
+    </div>
+
+    <!--nav bar-->
+    <nav>
+        <div class="container main-nav flex">
+            <a href="/index.html" class="ourlogo">
+                <img src="./images/main-logo-2.png" alt="logo">
+            </a>
+            <div class="nav-links">
+                <ul class="flex">
+                    <li><a href="/scheme.html" class="hover-link primary-button">Scheme</a></li>
+                    <li><a href="/scheme.html" class="hover-link">Resources</a></li>
+                    <li><a href="#" class="hover-link">About us</a></li>
+                    <li><a href="#" class="hover-link">Contact</a></li>
                 </ul>
             </div>
             <div class="hamburger-menu">
                 <i class="fa fa-bars"></i>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <main>
         <div class="main-container">
             <div class="content">
-                <h1>Select Syllabus <span class="purple">Scheme</h1>
+                <h1>Select Syllabus <span class="purple">Scheme</span></h1>
                 <div class="selection-button">
                     <select id="syllabus-scheme" onchange="showSemesters()">
                         <option value="" disabled selected>Select Scheme</option>
