--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VTUChamp</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -30,9 +31,9 @@
                     <li><a href="#" class="hover-link">Contact</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="hamburger-menu">
-            <i class="fa fa-bars"></i>
+            <div class="hamburger-menu">
+                <i class="fa fa-bars"></i>
+            </div>
         </div>
     </nav>
 
