--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VTUChamp</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -23,7 +22,7 @@
             <a href="/index.html" class="ourlogo">
                 <img src="./images/main-logo-2.png" alt="logo">
             </a>
-            <div class="nav-links">
+            <div class="nav-links" id="nav-links">
                 <ul class="flex">
                     <li><a href="/scheme.html" class="hover-link primary-button">Scheme</a></li>
                     <li><a href="/scheme.html" class="hover-link">Resources</a></li>
@@ -62,7 +61,7 @@
             <div class="feature-desc flex">
                 <h3>Upcoming Features on this platform</h3>
                 <h3>Get ready for a revolution in note-taking!</h3>
-                <p>StudySphere will be powered by AI to effortlessly extract and organize notes from your PDFs,
+                <p>VTUChamp will be powered by AI to effortlessly extract and organize notes from your PDFs,
                     documents, and more. Stay tuned for smarter, faster studying!</p>
             </div>
         </div>
@@ -116,7 +115,8 @@
             <a class="hover-link" href="#">Terms & Condition</a>
             <a class="hover-link" href="#">Security Information</a>
             <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-x"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/6024a02b82.js" crossorigin="anonymous"></script>
